Maitian Date and PWA

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://nepalidate.omkumarpandey.com.np/">
     
+    <!-- Link your manifest -->
+  <link rel="manifest" href="manifest.json">
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nepalidate.omkumarpandey.com.np/">
